# docs/swagger.json
@@ -65,7 +65,7 @@
             "content": {
               "application/json": {
                 "example": {
-                  "id": "user_id",
+                  "id": "65797f9c76b1e84bad00aeec",
                   "email": "user@example.com",
                   "pseudo": "username",
                   "role": "user"
@@ -133,6 +133,11 @@
       "delete": {
         "summary": "Delete a user",
         "tags": ["Users"],
+        "security": [
+          {
+            "JWT": ["admin"]
+          }
+        ],
         "parameters": [
           {
             "name": "userId",
@@ -180,7 +185,7 @@
             "content": {
               "application/json": {
                 "example": {
-                  "token": "jwt_token"
+                  "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"
                 }
               }
             }
@@ -190,6 +195,524 @@
           },
           "404": {
             "description": "User not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/stations": {
+      "get": {
+        "summary": "List stations",
+        "tags": ["Stations"],
+        "parameters": [
+          {
+            "name": "sortBy",
+            "in": "query",
+            "description": "Sort stations by a specific field",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "List of stations",
+            "content": {
+              "application/json": {
+                "example": {
+                  "stations" : [
+                    {
+                        "_id": "657981f682a52d6b39bc26c6",
+                        "name": "Gare de l'Est",
+                        "open_hour": "06:00",
+                        "close_hour": "23:00",
+                        "__v": 0
+                    },
+                    {
+                        "_id": "6579820982a52d6b39bc26c8",
+                        "name": "Gare du Nord",
+                        "open_hour": "05:00",
+                        "close_hour": "23:30",
+                        "__v": 0
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "summary": "Create a new station",
+        "tags": ["Stations"],
+        "security": [
+          {
+            "JWT": ["admin"]
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "example": {
+                "name": "Station name",
+                "open_hour": "8:00",
+                "close_hour": "20:00",
+                "image": "img/image.jpg"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Station created successfully",
+            "content": {
+              "application/json": {
+                "example": {
+                  "name": "Station name",
+                    "open_hour": "8:00",
+                    "close_hour": "20:00",
+                    "image": "test-resized.jpg",
+                    "_id": "6579c6eb7d8cdf96f2084042",
+                    "__v": 0
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/stations/{stationId}": {
+      "get": {
+        "summary": "Get station information",
+        "tags": ["Stations"],
+        "parameters": [
+          {
+            "name": "stationId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Station information",
+            "content": {
+              "application/json": {
+                "example": {
+                  "id": "6579c6eb7d8cdf96f2084042",
+                  "name": "Station name",
+                  "open_hour": "8:00",
+                  "close_hour": "20:00",
+                  "image": "\\img\\image-resized.jpg"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Station not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "summary": "Update station information",
+        "tags": ["Stations"],
+        "security": [
+          {
+            "JWT": ["admin"]
+          }
+        ],
+        "parameters": [
+          {
+            "name": "stationId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "example": {
+                  "name": "New station name",
+                  "open_hour": "8:00",
+                  "close_hour": "20:00",
+                  "image": "img/newimage.jpg"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Station updated successfully",
+            "content": {
+              "application/json": {
+                "example": {
+                  "__id": "6579c6eb7d8cdf96f2084042",
+                  "name": "New station name",
+                  "open_hour": "8:00",
+                  "close_hour": "20:00",
+                  "image": "newimage-resized.jpg",
+                  "__v": 0
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Station not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete a station",
+        "tags": ["Stations"],
+        "security": [
+          {
+            "JWT": ["admin"]
+          }
+        ],
+        "parameters": [
+          {
+            "name": "stationId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Station deleted successfully"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Station not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/trains": {
+      "get": {
+        "summary": "List trains",
+        "tags": ["Trains"],
+        "parameters": [
+          {
+            "name": "sortBy",
+            "in": "query",
+            "description": "Sort stations by name",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "List of trains",
+            "content": {
+              "application/json": {
+                "example": {
+                  "trains" : [
+                    {
+                      "_id": "65798a5e1c487ca270784d3f",
+                      "name": "Train 1",
+                      "start_station": "657981f682a52d6b39bc26c6",
+                      "end_station": "6579820982a52d6b39bc26c8",
+                      "time_of_departure": "2023-12-13T13:15:00.000Z",
+                      "__v": 0
+                    },
+                    {
+                      "_id": "65798b201c487ca270784d48",
+                      "name": "Train 2",
+                      "start_station": "657981f682a52d6b39bc26c6",
+                      "end_station": "6579820982a52d6b39bc26c8",
+                      "time_of_departure": "2023-12-13T13:15:00.000Z",
+                      "__v": 0
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "summary": "Create a new train",
+        "tags": ["Trains"],
+        "security": [
+          {
+            "JWT": ["admin"]
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "example": {
+                "name": "Train test 3",
+                "start_station": "Gare de l'Est",
+                "end_station": "Gare du Nord",
+                "time_of_departure": "2023-12-17T13:15:00.000Z"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Train created successfully",
+            "content": {
+              "application/json": {
+                "example": {
+                  "name": "Train test 3",
+                  "start_station": "657981f682a52d6b39bc26c6",
+                  "end_station": "6579820982a52d6b39bc26c8",
+                  "time_of_departure": "2023-12-17T13:15:00.000Z",
+                  "_id": "6579cc511174649ee3a58fff",
+                  "__v": 0
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/trains/{trainId}": {
+      "get": {
+        "summary": "Get train information",
+        "tags": ["Trains"],
+        "parameters": [
+          {
+            "name": "trainId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Train information",
+            "content": {
+              "application/json": {
+                "example": {
+                  "id": "6579cc511174649ee3a58fff",
+                  "name": "Train test 3",
+                  "start_station": {
+                      "_id": "657981f682a52d6b39bc26c6",
+                      "name": "Gare de l'Est",
+                      "open_hour": "06:00",
+                      "close_hour": "23:00",
+                      "__v": 0
+                  },
+                  "end_station": {
+                      "_id": "6579820982a52d6b39bc26c8",
+                      "name": "Gare du Nord",
+                      "open_hour": "05:00",
+                      "close_hour": "23:30",
+                      "__v": 0
+                  },
+                  "time_of_departure": "2023-12-17T13:15:00.000Z"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Train not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "summary": "Update train information",
+        "tags": ["Trains"],
+        "security": [
+          {
+            "JWT": ["admin"]
+          }
+        ],
+        "parameters": [
+          {
+            "name": "trainId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "example": {
+                "name": "Train test 3",
+                "start_station": "New start station",
+                "end_station": "New end station",
+                "time_of_departure": "2023-12-17T13:15:00.000Z"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Train updated successfully"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Train not found || Start of end station not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete a train",
+        "tags": ["Trains"],
+        "security": [
+          {
+            "JWT": ["admin"]
+          }
+        ],
+        "parameters": [
+          {
+            "name": "trainId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Train deleted successfully"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Train not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/tickets" : {
+      "post": {
+        "summary": "Book a ticket",
+        "tags": ["Tickets"],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "example": {
+                "user": "user@gmail.com",
+                "train": "Train 1"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Ticket created successfully",
+            "content": {
+              "application/json": {
+                "example": {
+                  "name": "Train test 3",
+                  "start_station": "657981f682a52d6b39bc26c6",
+                  "end_station": "6579820982a52d6b39bc26c8",
+                  "time_of_departure": "2023-12-17T13:15:00.000Z",
+                  "_id": "6579cc511174649ee3a58fff",
+                  "__v": 0
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/tickets/{ticketId}/validate": {
+      "put": {
+        "summary": "Validate a ticket",
+        "tags": ["Tickets"],
+        "security": [
+          {
+            "JWT": ["admin", "employee"]
+          }
+        ],
+        "parameters": [
+          {
+            "name": "ticketId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "example": {
+                "is_valid": "true"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Ticket validated successfully"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Ticket not found"
           },
           "500": {
             "description": "Internal Server Error"
